# decktricks

./: .actrc  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  TODO  build.sh  config-smoke.json  config.json  config.json.broken  decktricks.desktop  perf.data  perf.data.old  profile.json  zenity_test.sh
.github/workflows/: all.yml  build_godot_gui.yml  build_latest.yml  debug.yml  make_stable_release.yml  rust.yml  rust_cli.yml
build_assets/: decktricks-gui.sh  decktricks-install.desktop  decktricks-install.sh  decktricks-update.sh  decktricks.desktop  decktricks_install.desktop  decktricks_install.sh
ci_scripts/: cli.sh  compress.sh  gui.sh  init.sh  lib.sh  place_build_assets.sh
decktricks-update/: Cargo.toml  test-cases.txt
decktricks-update/src/: check_hashes.rs  download.rs  error.rs  lib.rs  live_update.rs  main.rs  utils.rs  xxhash.rs
decktricks-update/test-data/: XXH64SUMS.correct  XXH64SUMS.lawl_incorrect  XXH64SUMS.lol_filename_not_present  XXH64SUMS.lol_incorrect  XXH64SUMS.nonexistent_file  XXH64SUMS.tar_incorrect  test-data.tar.xz
decktricks-update/tests/: lib.rs
gui/godot/: .gitignore  Decktricks.gdextension  decktricks  decktricks-cli.gdextension  decktricks-cli.gdextension.uid  dev_build.sh  dev_run.sh  dev_test.sh  export_presets.cfg  export_profile_reduced.build  export_profile_reduced.py  project.godot
gui/rust/: Cargo.toml  README.md
gui/rust/src/: action_button.rs  create_all_action_buttons.rs  dispatcher.rs  gui.rs  initial_setup.rs  lib.rs  logging.rs  logs_container.rs  utils.rs
gui/rust/tests/: lib.rs
misc/: gui_benchmarks_built.txt  gui_benchmarks_debug.txt
misc/act-docker/: Dockerfile  build_directions.txt  update_godot.sh
scripts/: benchmark_gui_startup_speed.sh  build_decktricks_gui.sh  build_local_docker_image.sh  decktricks.desktop  decktricks_install.desktop  decktricks_install.sh  gui_simple_e2e_test.sh  push_local_docker_image.sh  restart_steam.sh  run_all_gui_e2e_tests.sh  update_latest_branch.sh  update_stable_branch.sh  update_staging_branch.sh
scripts/tests/: lib.sh  test_gui_does_not_exit.sh  test_gui_simple_e2e.sh  test_gui_startup_speed.sh
src/: TODO  actions.rs  add_to_steam.rs  command.rs  controller_layout.rs  errors.rs  executor.rs  lib.rs  logging.rs  macros.rs  main.rs  prelude.rs  provider_types.rs  read_tricks_config.rs  run.rs  run_system_command.rs  sample.jsonc  tail_watcher.rs  tricks_config.rs  tricks_status.rs  utils.rs
src/actions/: general.rs  mod.rs  specific.rs
src/gui/: mod.rs  zenity.rs
src/providers/: decky_installer.rs  emudeck_installer.rs  flatpak.rs  flatpak_helpers.rs  geforce_now.rs  mod.rs  simple_command.rs  system_context.rs  systemd_run.rs  types.rs
src/steam/: mod.rs
src/system_command_runners/: actual_runner.rs  live_system_command.rs  merge_stdouterr.rs  mod.rs  system_command.rs
tests/: broken_config.json  integration_tests.rs  test_config.json
tests/integration/: double_shortcut.vdf  integration_tests.rs  mod.rs  shortcut_double.vdf  shortcut_single.vdf  single_shortcut.vdf  test_config.json  utils.rs  zenity_e2e.rs
(+137 files in other folders)
