[package]
name = "decktricks"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mockall = "0.13.0"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde-hjson = "1.0"
serde_json = "1.0"
serde_with = "3.9"
urlencoding = "2.1.3"
