[package]
name = "decktricks_godot_gui"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"] }
decktricks = { path = "../.." }
