[package]
name = "decktricks_godot_gui"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"] } #, "api-custom"] }
decktricks = { path = "../.." }

[dev-dependencies]
wait-timeout = "0.2.0"
ctor = "0.2"
tempfile = "3"

[profile.release]
lto = true

[[bin]]
name = "gui-tool"
path = "src/bin/gui_tool.rs"
